--- a/Module 03/Day 10/Snaps/readme
+++ b/Module 03/Day 10/Snaps/readme
@@ -1,7 +1,7 @@
 /******************************************************************************************************************
     Questions Covered : 
     
-    1.
-    2.
+    1.  Queue Syntax Learning
+    2.  Print Binary
     3.
 ******************************************************************************************************************/
